CEIUtils : function to convert list of custom entity instances to list of EntityOrRelation #323